--- a/SaleService/SaleService.csproj
+++ b/SaleService/SaleService.csproj
@@ -1,14 +1,50 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Clients\Email\Email.json" />
+    <Content Remove="Clients\Sms\Sms.json" />
+    <Content Remove="EmailClient.json" />
+    <Content Remove="SmsClient.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="JsonSubTypes" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.20" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Clients\Email\Email.json">
+      <Generator>NSwagCodeGenerator</Generator>
+      <LastGenOutput>Email.cs</LastGenOutput>
+    </None>
+    <None Include="Clients\Sms\Sms.json">
+      <Generator>NSwagCodeGenerator</Generator>
+      <LastGenOutput>Sms.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Clients\Email\Email.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Email.json</DependentUpon>
+    </Compile>
+    <Compile Update="Clients\Sms\Sms.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Sms.json</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
